
	Risk Game:	1.1.1.6
	 * Save:	8
	 * Network:	11

	Android		56
	Flash GUI:	2
	Swing GUI:	2
	Simple GUI:	1.1.1.1
	Increment1GUI:	1.1.1.1
	CommandLine:	1.0.4.1

1.1.1.6

	OS X java 1.7 maps dir missing deadlock fix
	OS X java 1.7 open html help in browser fix
	pt_PT update by Pipanni
	SwingGUI sends more info on crash and feedback

	Android 56 Can view own cards at any point in the game.
	Android 55 updated to Turkish translation - Ekin Topuz
		   better error messages
	Android 54 Private games through Google Play Game Services added.
	Android 53 Capital achievements only given when game actually won - Amanda Lunn
		   sort by rating actually uses g+ +1 count now
	Android 52 italian achievements added
		   can view all possible achievements from main menu 
	Android 51 added google play games services achievements
		   autoplace works even with no empty countries
	Android 50 Send feedback option added
		   can change default app language

1.1.1.5

	annihilate button added to FlashGUI attack screen
	Czech and Slovak languages added by Viliam Tomcanyi
	del islands tool added to the MapEditor
	can load a savegame file by double clicking on it or "Domination.jar c:\test.save"
	done: get rid of "[X]" brakets from main menu
	strange nativenoresult popups in windows 7 fixed
	DONE: make SwingME act like xhdpi on mac retina screen

	Android 49 more logging, crash in lib fix
	Android 48 dice stats added - patch by Jerome Abela
		   undo at end of game fixed
		   can change ai wait for local games
	Android 47 correct console output when trading cards in fixed/italian mode
	Android 46 better checks for ai errors
		   support for new server messages for rename
	Android 45 gamesave during gamesetup works again
		   does not ask to quit game if you are not in game
		   when you make a new game make sure its visible in the list
	Android 44 zero data fix
		   trade fix by hawkprime
	Android 43 10,20,30sec online game timeouts added